# scie

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  demo.json  justfile
.github/workflows/: ci.yml
benchmark/: Cargo.toml  README.md
benchmark/samples/: vscode.d.ts.txt
benchmark/src/: main.rs
docs/: README.md  crash.md  unicode-list.md
docs/adr/: 0001-base-language-choice.md  0002-grammer-engine-choice.md  0003-rule-map-not-align-issue.md  0004-cache-compiled.md  0005-switch-to-onig-sys-api.md  0006-add-rust-onig-to-source-code.md  0007-use-bin-data-for-languages.md  0008-bindata-for-embed.md  0009-framework-detector.md  0010-align-extensions.md  0011-gitignore-design.md  0012-multiple-thread.md  0013-virtual-file-system.md  0014-code-generate-engine.md  0015-migration-to-tree-sitter.md  README.md
docs/compare/: makefile-compare.md
docs/design/: facet.md  grammar.md
docs/issues/: c.md
examples/c/: CMakeLists.txt  hello.c  hello2.c
examples/go/: go.mod
examples/java/: HelloWorld.java
extensions/groovy/syntaxes/: groovy.tmLanguage.json
extensions/perl/syntaxes/: perl.tmLanguage.json
extensions/r/syntaxes/: r.tmLanguage.json
extensions/xml/syntaxes/: xml.tmLanguage.json
fixtures/finder/ignore-test/: .gitignore  hello.cj
fixtures/samples/makefile/oniguruma/: Makefile
fixtures/test-cases/e2e/java/: HelloWorld.java
fixtures/test-cases/e2e/javascript/: pairs.js
fixtures/test-cases/e2e/makefile/: Makefile
fixtures/test-cases/e2e/rust/: rust.rs.txt
fixtures/test-cases/first-mate/fixtures/: java.json
onigdemo/: Cargo.toml
onigdemo/src/: main.rs
onigvs/: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  build.rs  onig.cc
onigvs/libfoo++/: CMakeLists.txt  foo.cpp
onigvs/libonigvs/: CMakeLists.txt  config.h  onig.cc  onigvs.c  onigvs.cc
onigvs/src/: ffi.rs  main.rs
scie-bingen/: .gitignore  Cargo.toml
scie-bingen/src/: bin_gen.rs  ext_file.rs  grammar_gen.rs  grammar_map.rs  language_gen.rs  language_map.rs  lib.rs  main.rs
scie-cli/: .gitignore  Cargo.toml  README.md
scie-cli/src/: main.rs  validate.rs
scie-core/: Cargo.toml
scie-core/src/: identify.rs  lib.rs
scie-core/src/analyser/: analyser.rs  identify.rs  mod.rs
scie-core/src/sima/: java_sima.rs  mod.rs  sima.rs  sima_writer.rs
scie-detector/: Cargo.toml
scie-detector/docs/: Command.md  README.md
scie-detector/src/: content_root.rs  framework_detector.rs  go_facet.rs  javascript_facet.rs  jvm_facet.rs  lib.rs  python_facet.rs  rust_facet.rs
scie-detector/src/dependency/: base_library.rs  library_dependency.rs  module_dependency.rs  project_dependency.rs
scie-detector/src/facet/: java_facet.rs  javascript_facet.rs  jvm_facet.rs  mod.rs  rust_facet.rs
scie-detector/src/facet/java/: java_facet.rs  java_module_data.rs  mod.rs
scie-detector/src/facet/javascript/: javascript_facet.rs
scie-grammar/: .gitignore  Cargo.toml  LICENSE
scie-grammar/src/: grammar_registry.rs  lib.rs  matcher.rs  reg_exp_source.rs  rule.rs  scope_dependency.rs  sync_register.rs
scie-grammar/src/grammar/: grammar.rs  grammar_reader.rs  grammar_registry.rs  line_tokens.rs  local_stack_element.rs  mod.rs  rule_container.rs  scope_list_element.rs  stack_element.rs
scie-grammar/src/grammar/grammar/: mod.rs  scope_list_element.rs  scope_metadata.rs  stack_element.rs
scie-grammar/src/inter/: injections.rs  location.rs  mod.rs  raw_captures.rs  raw_grammar.rs  raw_repository.rs  raw_rule.rs
scie-grammar/src/registry/: grammar_registry.rs  mod.rs  scope_dependency.rs  sync_register.rs
scie-grammar/src/rule/: abstract_rule.rs  begin_end_rule.rs  begin_while_rule.rs  capture_rule.rs  compiled_rule.rs  empty_rule.rs  factory.rs  include_only_rule.rs  match_rule.rs  mod.rs  reg_exp_source.rs  rule.rs  rule_convert.rs  rule_factory.rs
scie-grammar/src/scanner/: scanner.rs
scie-grammar/src/support/: mod.rs  regex_source.rs
scie-grammar/test-cases/e2e/json/: simple-json.json
scie-grammar/test-cases/first-mate/: README.md
scie-grammar/test-cases/first-mate/fixtures/: makefile.json
scie-infra/: Cargo.toml
scie-infra/src/: finder.rs  format_output.rs  lib.rs  serialize_support.rs
scie-model/: Cargo.toml  README.md
scie-model/src/: contribute.rs  json_package.rs  language_config.rs  lib.rs  raw_language.rs  tm_grammar.rs
scie-model/src/artifact/: code_element.rs  code_file.rs  mod.rs
scie-onig/: .gitignore  Cargo.toml  README.md
scie-onig/libonigvs/: onigvs.c
scie-onig/src/: ffi.rs  lib.rs  scie_onig.rs  scie_scanner.rs
scie-regex/: Cargo.toml
scie-regex/src/: lib.rs  scanner.rs
scie-scanner/: Cargo.toml  README.md  justfile
scie-scanner/src/: lib.rs
scie-scanner/src/scanner/: LICENSE  mod.rs  onig_scanner.rs  onig_string.rs  scanner.rs  scie_error.rs  scie_onig.rs  scie_scanner.rs  utf_string.rs
scie-scanner/src/scanner/old/: mod.rs  scie_error.rs  scie_onig.rs  scie_scanner.rs
src/: README.md  finder.rs  identify.rs  main.rs  scie_model.rs
src/artifact/: README.md  mod.rs
src/bindata/: README.md  mod.rs
src/model/: contribute.rs  json_package.rs  language_config.rs  mod.rs  raw_language.rs  tm_grammar.rs
vscode-tests/: index.js  package.json  regex-test.js  ruleid2rule.json
vscode-tests/syntaxes/plist/: C.plist
vscode-tests/testdata/: c.out.json  makefile.out.json
vscode-tests/vscode-onig/: README.md  index.html  package.json  tsconfig.json
vscode-tests/vscode-onig/src/: index.ts
vscode-tests/vscode-onig/src/lib/: onig-string.ts  types.ts  utf-string.spec.ts  utf-string.ts
