[package]
name = "scie"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0"

#serde_regex = "1.1.0"
regex = "1"

lazy_static = "1.4.0"

[dependencies.scie-grammar]
path = "scie-grammar"

[dependencies.scie_scanner]
path = "scie-scanner"

[dependencies.scie_model]
path = "scie-model"

[dependencies.scie_infra]
path = "scie-infra"

[workspace]
members = [
    "benchmark",
    "scie-bingen",
    "scie-detector",
    "scie-grammar",
    "scie-infra",
    "scie-model",
    "scie-onig",
    "scie-scanner",
]
