[package]
name = "scie"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

[dependencies]

[workspace]
members = [
    "benchmark",
    "scie-bingen",
    "scie-detector",
    "scie-grammar",
    "scie-infra",
    "scie-model",
    "scie-onig",
    "scie-scanner",
    "scie-cli",
    "scie-core"
]
