[package]
name = "scie"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/scie"
documentation = "https://github.com/phodal/scie"
homepage = "https://github.com/phodal/scie"
description = """
Scie is a research about how to build simple code identify engine for different languages.
"""
categories = ["text-processing", "command-line-interface", "development-tools", "parser-implementations", "parsing"]
exclude = [
    "vscode-tests/*",
    "benchmark/*",
    "fixtures/*",
    ".github/*",
    ".gitattributes",
    ".adr.json",
    ".cargo_vcs_info.json",

    # vscode
    "**/snippets/*",
    "extensions/**/test/*",
    "**/.vscodeignore",
    "**/package.nls.json",
    "**/language-configuration.json",
    "**/*.language-configuration.json",
]

[dependencies]

[workspace]
members = [
    "benchmark",
    "scie-bingen",
    "scie-detector",
    "scie-grammar",
    "scie-infra",
    "scie-model",
    "scie-onig",
    "scie-scanner",
    "scie-cli",
    "scie-core"
]
