[package]
name = "scie_bingen"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0"

bincode = "1.3.1" # https://github.com/servo/bincode

walkdir = "2"

[dependencies.scie_infra]
path = "../scie-infra"

[dependencies.scie_model]
path = "../scie-model"

[dependencies.scie_grammar]
path = "../scie-grammar"
