[package]
name = "scie-grammar"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json convert
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

serde_derive = "1.0.115"
erased-serde = "0.3"

dyn-clone = "1.0"


[dependencies.scie_scanner]
path = "../scie-scanner"
