[package]
name = "scie_infra"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

lazy_static = "1.4.0"
gitignore = "1.0.7"
walkdir = "2"

regex = "1"

tempfile = "3"
