[package]
name = "scie_model"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/phodal/scie"
documentation = "https://github.com/phodal/scie"
homepage = "https://github.com/phodal/scie"
description = """
Scie is a research about how to build simple code identify engine for different languages.
"""
categories = ["text-processing", "command-line-interface", "development-tools", "parser-implementations", "parsing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.115"
serde_json = "1.0"

[dev-dependencies.scie_infra]
path = "../scie-infra"
