[package]
name = "scie-onig"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
cmake = "0.1.31"
bindgen = { version = "0.55", optional = true, features = [ "runtime" ] }
pkg-config = "^0.3.16"

[features]
default = ["generate"]
print-debug = []
posix-api = []
generate = ["bindgen"]
