[package]
name = "scie_scanner"
version = "0.1.0"
authors = ["Phodal Huang <h@phodal.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
onig_sys = "69.5.1"
# regex library
onig = "6"

lazy_static = "1.2"
bitflags = "1.0"

# libc = "0.2"
# unicode support for chart splice
unicode-segmentation = "1.6.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.115"


[target.'cfg(windows)'.dependencies]
libc = "0.2"

